# termplay

./: Cargo.toml
.github/workflows/: rust.yml
client/src/: network.rs  termination.rs
client/src/store/: action.rs
client/src/ui/: login_page.rs
client_cli/: Cargo.toml
client_cli/src/: main.rs
client_term/: Cargo.toml
client_term/src/: main.rs
client_term/src/store/: command.rs  mod.rs  state.rs  store.rs
client_term/src/ui/: application.rs  mod.rs  ui.rs
common/: Cargo.toml
common/src/: client.rs  command.rs  lib.rs  server.rs
confirmation_server/: Cargo.toml
confirmation_server/src/: main.rs
register_server/: Cargo.toml  termplay.ini.example
register_server/src/: main.rs
src/: main.rs  network.rs  termination.rs  utils.rs
src/store/: action.rs  event.rs  mod.rs  state.rs  store.rs
src/ui/: application.rs  button.rs  exit_modal.rs  field.rs  label.rs  layout.rs  line.rs  login_page.rs  mod.rs  register_page.rs  text_input.rs  ui.rs  ui_object.rs  utils.rs  widget.rs  widget_holder.rs
src/ui/pages/: mod.rs
src/ui/pages/login_page/: login_page.rs
src/ui/pages/widgets/: button.rs  text_input.rs
src/ui/ui_object/: mod.rs  ui_object.rs
tests/: all.rs
