[package]
name = "termplay-confirmation-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini = "1.3.0"
common = { path = "../common"}
anyhow = "1.0.81"
rocket = { version = "0.5.0", features = ["json", "tls", "serde_json"] }
