[package]
name = "termplay_register_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.23.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-stream = { version = "0.1.14", default-features = false, features = ["io-util"] }
