[package]
name = "termplay-register-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini = "1.3.0"
rustls = "0.23.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-stream = { version = "0.1.14", default-features = false, features = ["io-util"] }
common = { path = "../common"}
anyhow = "1.0.81"
mailgun-rs = "0.1.10"
rusqlite = { version = "0.31.0", features = ["bundled"] }
bcrypt = "0.15.1"
random-string = "1.1.0"
rocket = { version = "0.5.0", features = ["json", "tls", "serde_json"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
